Don't use Boolean's constructor (it's senseless)
git-svn-id: https://scm.mmbase.org/mmbase/trunk@14861 91430c5f-d668-0410-9e7d-dd663366dcfd